# src/routes/adminRoutes.js
@@ -13,6 +13,7 @@ router.use(logAdminAction);
 // Vendor management routes
 router.get('/vendors', adminController.getVendors);
 router.get('/vendors/:id', adminController.getVendorDetails);
+router.get('/vendors/:id/documents', adminController.getVendorDocuments);
 router.put('/vendors/:id/approve', adminController.approveVendor);
 router.put('/vendors/:id/reject', adminController.rejectVendor);
 
